--- a/static/style.css
+++ b/static/style.css
@@ -1,1 +1,4 @@
-body { padding-top: 20px; }
+body { padding-top: 0; }
+@media (min-width:768px){
+  #sidebarMenu + .flex-grow-1 { margin-left: 220px; }
+}
