--- a/templates/zones.html
+++ b/templates/zones.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <h2>Зоны доставки</h2>
+<a class="btn btn-primary mb-3" href="{{ url_for('create_zone') }}">Создать зону</a>
 <div class="table-responsive">
 <table class="table table-striped mb-3">
     <thead>
