--- a/templates/zones.html
+++ b/templates/zones.html
@@ -22,7 +22,9 @@
     </tbody>
 </table>
 </div>
-<div id="map" style="height:400px;"></div>
+<div class="map-container" style="width: 100%; height: 50vh;">
+    <div id="map" class="leaflet-map"></div>
+</div>
 {% endblock %}
 {% block scripts %}
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
