--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,16 @@
 body { padding-top: 0; }
-@media (min-width:768px){
+
+@media (min-width:768px) {
   #sidebarMenu + .flex-grow-1 { margin-left: 220px; }
 }
- main
+
+.map-container {
+  width: 100%;
+  height: 50vh;
+  margin-top: 1rem;
+}
+
+.leaflet-map {
+  width: 100%;
+  height: 100%;
 }
